2012-01-02 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-importer.c:
	* src/core/na-importer.h (na_importer_import_from_list):
	Renamed as na_importer_import_from_uris.
	Now returns the count of succesffully imported items.

	* src/nact/nact-assistant-import.c (assistant_apply):
	* src/nact/nact-tree-model-dnd.c (drop_uri_list):
	* src/test/test-reader.c (main): Updated accordingly.

	* src/api/na-iimporter.h: Update documentation.

	* m4/na-maintainer-mode.m4: Reverse the sens of deprecation test.

	* configure.ac:
	* docs/reference/Makefile.am:
	* src/api/na-core-utils.h:
	* src/api/na-data-boxed.h:
	* src/api/na-gconf-monitor.h:
	* src/api/na-gconf-utils.h:
	* src/api/na-iduplicable.h:
	* src/api/na-iexporter.h:
	* src/api/na-object-api.h:
	* src/api/na-object.h:
	* src/core/na-core-utils.c:
	* src/core/na-data-boxed.c:
	* src/core/na-exporter.c:
	* src/core/na-gconf-monitor.c:
	* src/core/na-gconf-utils.c:
	* src/core/na-iduplicable.c:
	* src/core/na-object.c:
	* src/io-gconf/nagp-gconf-provider.c:
	* src/io-gconf/nagp-writer.c:
	* src/io-gconf/nagp-writer.h: Updated accordingly.

	* src/core/na-importer.c (na_importer_import_from_list): Fix typo.

	* src/core/na-about.c:
	* src/core/na-about.h (na_about_get_icon_name): Returns a const string.

	* src/plugin-menu/nautilus-actions.c: Updated accordingly.

	* Allmost all files: Bump copyright year.

	* ChangeLog-2011: New file.

	* src/core/na-exporter.c (exporter_get_formats): Fix variable declaration.

	* src/api/na-core-utils.h:
	* src/core/na-core-utils.c (na_core_utils_str_add_prefix):
	Fix function deprecation.

2012-01-01 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/export-format-ask.png: Add omitted image.

	* src/api/na-core-utils.h:
	* src/core/na-core-utils.c (na_core_utils_str_add_prefix): Deprecated function.

	* src/core/na-import-mode.c:
	* src/core/na-import-mode.h (na_import_mode_get_id): New function.

	* src/core/na-importer-ask.c (on_destroy_toplevel): Fix handler signature.
